# axy

./: .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  buf.gen.yaml
cmake/: deps.cmake
cmake/Modules/: Buf.cmake
cmake/fetch/: CMakeLists.txt
configured_files/: CMakeLists.txt  config.h.in
docker/: grpcwebproxy.dockerfile
proto/: CMakeLists.txt
src/: CMakeLists.txt
src/axy/: CMakeLists.txt  event-service.cc  event-service.h  logging.cc  logging.h  main.cc  server.cc  server.h  speech-service.cc  speech-service.h  test-client.cc
